--- a/home.css
+++ b/home.css
@@ -11,3 +11,19 @@ a{
   color: white;
   text-decoration: none;
 }
+button{
+   background-color: #6BFB;
+    margin-left: 689px;
+    margin-top: 57px;
+    font-size: 24px;
+    border-color: white;
+    height: 60px;
+    border-width: 3px;
+    width: 146px;
+    border-radius: 12px;
+}
+
+h1{
+        text-align: center;
+    margin-top: 123px;
+}
