--- a/blog.css
+++ b/blog.css
@@ -38,7 +38,7 @@ a {
   text-decoration: none;
   font-size: 30px;
 }
-navbar {
+header {
   overflow: hidden;
   background-color: #333;
   position: fixed; /* Set the navbar to fixed position */
