--- a/blog.css
+++ b/blog.css
@@ -38,10 +38,10 @@ a {
   text-decoration: none;
   font-size: 30px;
 }
-header {
+<!--header {
   overflow: hidden;
   background-color: #333;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-}
+} -->
